--- a/docs/Gemfile
+++ b/docs/Gemfile
@@ -1,7 +1,5 @@
 source "https://rubygems.org"
 
-gem "jekyll", "~> 3.9.0"
-gem "github-pages", "~> 219", group: :jekyll_plugins
-
-
+gem "github-pages", group: :jekyll_plugins
+gem "jekyll-include-cache", group: :jekyll_plugins
 gem "webrick", "~> 1.7"
