--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -18,21 +18,24 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 
-title: Your awesome title
-email: your-email@example.com
-description: >- # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
-baseurl: "" # the subpath of your site, e.g. /blog
-url: "" # the base hostname & protocol for your site, e.g. http://example.com
-twitter_username: jekyllrb
-github_username:  jekyll
+title: Tap Soup Studios
+email: contact@tapsoupstudios.com
+baseurl: "/docs/" # the subpath of your site, e.g. /blog
+url: "https://tapsoupstudios.com" # the base hostname & protocol for your site, e.g. http://example.com
+github_username: Tap-Soup-Studios
 
 # Build settings
-theme: jekyll-theme-cayman
+remote_theme: "mmistakes/minimal-mistakes@4.24.0"
 plugins:
-  - jekyll-feed
+  - jekyll-include-cache
+minimal_mistakes_skin: "dark" # "air", "aqua", "contrast", "default", "dark", "dirt", "neon", "mint", "plum", "sunrise"
+
+include:
+  - _pages
+  - farkle.png
+
+atom_feed:
+  hide: true
 
 # Exclude from processing.
 # The following items will not be processed, by default.
