--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -21,7 +21,7 @@
 title: Tap Soup Studios
 email: contact@tapsoupstudios.com
 domain: Tap-Soup-Studios.github.io
-url: "https://Tap-Soup-Studios.github.io"
+url: "https://tap-soup-studios.github.io"
 baseurl: "/Tap-Soup-Studios.github.io/"
 
 # Build settings
