--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -20,9 +20,9 @@
 
 title: Tap Soup Studios
 email: contact@tapsoupstudios.com
-domain: Tap-Soup-Studios.github.io
+domain: tap-soup-studios.github.io
 url: "https://tap-soup-studios.github.io"
-baseurl: "/Tap-Soup-Studios.github.io/"
+baseurl: "/tap-soup-studios.github.io/"
 
 # Build settings
 remote_theme: "mmistakes/minimal-mistakes@4.24.0"
